--- a/ohloh-restful-client/pom.xml
+++ b/ohloh-restful-client/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>br.com.caelum</groupId>
 			<artifactId>restfulie</artifactId>
-			<version>1.0.1</version>
+			<version>${restfulie.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.thoughtworks.xstream</groupId>
@@ -75,33 +75,33 @@
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.3</version>
+			<version>${xstream.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.1</version>
+			<version>${joda-time.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 		</dependency>
 
 		<!-- Banco de dados -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.2-1003-jdbc4</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 
 		<!-- JAVA EE -->
 		<dependency>
 			<groupId>org.glassfish.main.extras</groupId>
 			<artifactId>glassfish-embedded-all</artifactId>
-			<version>4.0</version>
+			<version>${glassfish-embedded-all.version}</version>
 		</dependency>
 
 		<!-- Hibernate -->
@@ -118,7 +118,7 @@
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
+			<version>${hibernate-jpa-2.0-api.version}</version>
 		</dependency>
 
 		<!-- Weld -->
@@ -133,8 +133,15 @@
 
 	<properties>
 		<hibernate.version>4.2.3.Final</hibernate.version>
+		<hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
 		<weld.version>2.0.3.Final</weld.version>
 		<java.version>1.7</java.version>
+		<xstream.version>1.4.3</xstream.version>
+		<restfulie.version>1.0.1</restfulie.version>
+		<postgresql.version>9.2-1003-jdbc4</postgresql.version>
+		<junit.version>4.11</junit.version>
+		<joda-time.version>2.1</joda-time.version>
+		<glassfish-embedded-all.version>4.0</glassfish-embedded-all.version>
 	</properties>
 
 </project>
