limpando  meus dados

--- a/ohloh-restful-client/src/main/resources/ohoh-account.properties
+++ b/ohloh-restful-client/src/main/resources/ohoh-account.properties
@@ -1,2 +1,3 @@
-meta.ohloh.api.key=QeujETW9gc1edfF4Bvqw
-meta.ohloh.user.mail=sfohart@gmail.com
+#Configure here your API KEY
+meta.ohloh.api.key=<your API KEY>
+meta.ohloh.user.mail=<your user email>
