--- a/ohloh-restful-client/pom.xml
+++ b/ohloh-restful-client/pom.xml
@@ -143,12 +143,13 @@
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
+			<version>${commons-collections.version}</version>
 		</dependency>
 
 	</dependencies>
 
 	<properties>
+	    <commons-collections.version>3.2.1</commons-collections.version>
 		<beanutils-version>1.8.3</beanutils-version>
 		<hibernate.version>4.2.3.Final</hibernate.version>
 		<hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
