--- a/ohloh-restful-client/src/main/resources/ohoh-account.properties
+++ b/ohloh-restful-client/src/main/resources/ohoh-account.properties
@@ -1,3 +1,13 @@
 #Configure here your API KEY
-meta.ohloh.api.key=<your API KEY>
-meta.ohloh.user.mail=<your user email>
+#meta.ohloh.api.key=QeujETW9gc1edfF4Bvqw
+meta.ohloh.api.key.01=QeujETW9gc1edfF4Bvqw
+meta.ohloh.api.key.02=Kpa20Df5gFXBsLwZ9fRbw
+meta.ohloh.api.key.03=1hQnFk1d2bTfzFQ2hsf8g
+meta.ohloh.api.key.04=6RkyXTNO7jIFuU5jLNROQ
+meta.ohloh.api.key.05=lbekD6Wx5COmEOQAsKVTA
+meta.ohloh.api.key.06=fpbtXfnlbCHJQiDB5uKIQA
+meta.ohloh.api.key.07=NAfdnO3Ry19EckX0s5qljA
+meta.ohloh.api.key.08=LyNaLn82p9klh27KBtpcsg
+meta.ohloh.api.key.09=sIVVRtA2Nv5tzlg8jRqA
+meta.ohloh.api.key.10=YNl1NPLoYvK9bqkt4fE7kQ
+meta.ohloh.user.mail=sfohart@gmail.com
