--- a/ohloh-restful-client/src/main/resources/ohloh.properties
+++ b/ohloh-restful-client/src/main/resources/ohloh.properties
@@ -43,3 +43,7 @@ meta.ohloh.api.kudos.sent=http://www.ohloh.net/accounts/{0}/kudos/sent.xml?api_k
 #enlistment
 meta.ohloh.api.enlistment.all=http://www.ohloh.net/projects/{0}/enlistments.xml?api_key={1}&v=1
 meta.ohloh.api.enlistment=http://www.ohloh.net/projects/{0}/enlistments/{1}.xml?api_key={2}&v=1
+
+#languages
+meta.ohloh.api.language.all=https://www.ohloh.net/languages.xml?api_key={0}&v=1
+meta.ohloh.api.language=https://www.ohloh.net/languages/{0}.xml?api_key={1}&v=1
